--- a/vue3_admin_template/project/src/styles/variable.scss
+++ b/vue3_admin_template/project/src/styles/variable.scss
@@ -1,3 +1,16 @@
-
 // 提供设置scss全局变量
 // $color: red;
+
+// 左侧菜单宽度
+$base-menu-width: 260px;
+// 左侧菜单背景颜色
+$base-menue-background: #001529;
+
+// 顶部导航高度
+$base-tabbar-height: 50px;
+
+// 左侧菜单logo高度设置
+$base-menu-logo-height: 50px;
+
+// 左侧菜单logo右侧文字大小
+$base-logo-title-fontSize: 20px;
