菜单折叠功能

--- a/vue3_admin_template/project/src/styles/variable.scss
+++ b/vue3_admin_template/project/src/styles/variable.scss
@@ -5,6 +5,7 @@
 $base-menu-width: 260px;
 // 左侧菜单背景颜色
 $base-menue-background: #001529;
+$base-menu-min-width: 50px;
 
 // 顶部导航高度
 $base-tabbar-height: 50px;
